[gd_scene load_steps=2 format=3 uid="uid://c7f8xm2q5jk1p"]

[ext_resource type="Script" path="res://scenes/debug/debug_ecs_overlay.gd" id="1_ecs_overlay"]

[node name="SC_DebugECSOverlay" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_ecs_overlay")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "ECS Overlay (F2)"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 300

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="EntityListLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2
text = "Entities"

[node name="FilterContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TagFilterLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/FilterContainer"]
layout_mode = 2
text = "Filter by Tag:"

[node name="TagFilterEdit" type="LineEdit" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/FilterContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter tag name..."

[node name="ComponentFilterLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/FilterContainer"]
layout_mode = 2
text = "Filter by Component:"

[node name="ComponentFilterOption" type="OptionButton" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/FilterContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ClearFilterButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/FilterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear Filters"

[node name="EntityList" type="ItemList" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="PaginationContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2

[node name="PrevPageButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/PaginationContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "◀"

[node name="PageLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/PaginationContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Page 1 of 1"
horizontal_alignment = 1

[node name="NextPageButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/PaginationContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "▶"

[node name="HSplitContainer2" type="HSplitContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
split_offset = 400

[node name="CenterPanel" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="ComponentInspectorLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2/CenterPanel"]
layout_mode = 2
text = "Component Inspector"

[node name="SelectedEntityLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2/CenterPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "No entity selected"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ComponentDetailsContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2/CenterPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="SystemViewLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2/RightPanel"]
layout_mode = 2
text = "Systems"

[node name="SystemList" type="ItemList" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2/RightPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="SystemControlsLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2/RightPanel"]
layout_mode = 2
text = "Selected System:"

[node name="SelectedSystemLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2/RightPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "None"

[node name="SystemEnabledCheckbox" type="CheckBox" parent="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2/RightPanel"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Enabled"

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/Header/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="text_changed" from="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/FilterContainer/TagFilterEdit" to="." method="_on_tag_filter_edit_text_changed"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/FilterContainer/ComponentFilterOption" to="." method="_on_component_filter_option_item_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/FilterContainer/ClearFilterButton" to="." method="_on_clear_filter_button_pressed"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/EntityList" to="." method="_on_entity_list_item_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/PaginationContainer/PrevPageButton" to="." method="_on_prev_page_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/LeftPanel/PaginationContainer/NextPageButton" to="." method="_on_next_page_button_pressed"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2/RightPanel/SystemList" to="." method="_on_system_list_item_selected"]
[connection signal="toggled" from="MarginContainer/PanelContainer/VBoxContainer/HSplitContainer/HSplitContainer2/RightPanel/SystemEnabledCheckbox" to="." method="_on_system_enabled_checkbox_toggled"]
